# yevis-cli

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile-dev  LICENSE  README.md  compose.yml  docker-compose.dev.yml  docker-compose.yml  release.sh
.github/workflows/: build_binary.yml  deploy.yml  deploy_ghcr.yml  test.yml
actions_example/: yevis-publish-pr.yml  yevis-test-pr.yml
actions_exmaple/: yevis-publish-pr.yml  yevis-test-pr.yml
do_not_use_gh/: Dockerfile  READMD.md  generate.py  test.metadata.yml  test.py
docs/: getting_started.md  getting_started_ja.md
src/: args.rs  env.rs  file_url.rs  gh.rs  gh_trs.rs  github_api.rs  inspect.rs  io.rs  lib_test.rs  logger.rs  main.rs  make_template.rs  path_utils.rs  pr.rs  publish.rs  pull_request.rs  raw_url.rs  remote.rs  sub_cmd.rs  test.rs  type_config.rs  validate.rs  version.rs  wes.rs  workflow_type_version.rs  zenodo.rs
src/gh/: api.rs  gist.rs  pr.rs
src/gh_trs/: command.rs  env.rs  github_api.rs  inspect.rs  lib.rs  logger.rs  raw_url.rs  remote.rs  trs.rs  wes.rs
src/gh_trs/command/: make_template.rs  publish.rs  test.rs  validate.rs
src/gh_trs/config/: io.rs
src/gh_trs/trs/: api.rs  response.rs  types.rs
src/metadata/: io.rs  types.rs
src/remote/: file_url.rs  gh_url.rs  gist_url.rs  remote.rs
src/sub_cmd/: make_template.rs  publish.rs  pull_request.rs  test.rs  validate.rs
src/trs/: api.rs  response.rs  types.rs
src/wes/: api.rs  instance.rs
src/zenodo/: api.rs  types.rs
src_prev/: args.rs  file_url.rs  pull_request.rs  validate.rs
tests/: README.md  test-metadata-CWL-apache2.yml  test-metadata-CWL-gist.yml  test-metadata-CWL-validated.yml  test-metadata-CWL.yml  test-metadata-NFL.yml  test-metadata-SMK.yml  test-metadata-WDL.yml  test_config_CWL.yml  test_config_CWL_apache2.yml  test_config_CWL_validated.yml  test_config_NFL.yml  test_config_SMK.yml  test_config_WDL.yml  test_config_broken.yml  yevis-CWL.yml  yevis-NFL.yml  yevis-SMK.yml  yevis-WDL.yml
tests/CWL/wf/: trimming_and_qc.packed.cwl
tests/NFL/test/: wf_params.json
tests/SMK/wf/: Snakefile
