[package]
authors = ["DDBJ(Bioinformatics and DDBJ Center)"]
edition = "2018"
license = "Apache-2.0"
name = "yevis"
readme = "https://github.com/ddbj/yevis-cli/README.md"
repository = "https://github.com/ddbj/yevis-cli"
version = "0.3.6"

[dependencies]
anyhow = { version = "1.0.57", features = ["backtrace"] }
base64 = "0.13.0"
chrono = { version = "0.4.19", features = ["serde"] }
colored = "2.0.0"
dotenv = "0.15.0"
env_logger = "0.9.0"
log = "0.4.17"
regex = "1.5.6"
reqwest = { version = "0.11.10", features = ["blocking", "json", "multipart"] }
rust-crypto = "0.2.36"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
serde_with = "1.14.0"
serde_yaml = "0.8.24"
sha2 = "0.10.2"
structopt = "0.3.26"
tempfile = "3.3.0"
url = { version = "2.2.2", features = ["serde"] }
uuid = { version = "1.1.2", features = ["serde", "v4"] }
