[package]
authors = ["DDBJ(Bioinformatics and DDBJ Center)"]
edition = "2018"
license = "Apache-2.0"
name = "yevis"
readme = "https://github.com/sapporo-wes/yevis-cli/README.md"
repository = "https://github.com/sapporo-wes/yevis-cli"
version = "0.5.7"

[dependencies]
anyhow = {version = "1.0.68", features = ["backtrace"]}
base64 = "0.21.0"
chrono = {version = "0.4.23", features = ["serde"]}
colored = "2.0.0"
dotenv = "0.15.0"
env_logger = "0.9.3"
log = "0.4.17"
regex = "1.7.1"
reqwest = {version = "0.11.14", features = ["blocking", "json", "multipart"]}
rust-crypto = "0.2.36"
serde = {version = "1.0.152", features = ["derive"]}
serde_json = "1.0.91"
serde_with = "2.2.0"
serde_yaml = "0.9.17"
sha2 = "0.10.6"
structopt = "0.3.26"
tempfile = "3.3.0"
url = {version = "2.3.1", features = ["serde"]}
uuid = {version = "1.3.0", features = ["serde", "v4"]}
