[package]
authors = ["DDBJ(Bioinformatics and DDBJ Center)"]
edition = "2021"
license = "apache-2.0"
name = "yevis"
readme = "https://github.com/sapporo-wes/yevis-cli/README.md"
repository = "https://github.com/sapporo-wes/yevis-cli"
version = "0.5.9"

[dependencies]
anyhow = {version = "1.0.79", features = ["backtrace"]}
base64 = "0.21.7"
chrono = {version = "0.4.33", features = ["serde"]}
colored = "2.1.0"
dotenv = "0.15.0"
env_logger = "0.11.1"
log = "0.4.20"
regex = "1.10.3"
reqwest = {version = "0.11.23", features = ["blocking", "json", "multipart"]}
rust-crypto = "0.2.36"
serde = {version = "1.0.196", features = ["derive"]}
serde_json = "1.0.113"
serde_with = "3.5.1"
serde_yaml = "0.9.31"
sha2 = "0.10.8"
structopt = "0.3.26"
tempfile = "3.9.0"
url = {version = "2.5.0", features = ["serde"]}
uuid = {version = "1.7.0", features = ["serde", "v4"]}
